Trusted Devices UI

--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewTrustedDevices.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewTrustedDevices.html
@@ -32,23 +32,23 @@
     <div id="trustedDevices">
         <h1>Manage Trusted Devices</h1>
         
-
-        <div class="tabsContainer hidden row">
-            <div id="alert-container"></div>
+        <div class="tabsContainer row">
             <!-- Nav tabs -->
             <ul id="myTabs" class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#trustedDevices" aria-controls="trustedDevices" role="tab"
-                                                          data-toggle="tab">Devices</a></li>
+                                                          data-toggle="tab">Trusted Devices</a></li>
             </ul>
-
-            <!-- Tab panes -->
+                        
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="trustedDevicesTab">
                     <table id="trustedDevicesTable" class="display table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>Col 1</th>
-                            <th>Col 2</th>
+                            <th>Name</th>
+                            <th>Principal</th>
+                            <th>Date</th>
+                            <th>Geography</th>
+                            <th>Actions</th>
                         </tr>
                         </thead>
                         <tbody>
