--- a/webapp/cas-server-webapp/src/main/resources/templates/error/401.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/error/401.html
@@ -26,7 +26,7 @@
             <p>You are not getting in.</p>
 
             <br/>
-            <p>In closing, <a href="/login">go away</a>. </p>
+            <p>In closing, <a th:href="@{/login}">go away</a>. </p>
 
         </div>
     </div>
