--- a/webapp/cas-server-webapp/src/main/resources/templates/error/403.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/error/403.html
@@ -25,7 +25,7 @@
             <p>Wrong.</p>
 
             <br/>
-            <p>In closing, <a href="/login">go away</a>. </p>
+            <p>In closing, <a th:href="@{/login}">go away</a>. </p>
 
         </div>
     </div>
