--- a/webapp/cas-server-webapp/src/main/resources/templates/error/404.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/error/404.html
@@ -26,7 +26,7 @@
                 but COME ON! It's like you're not even trying.</p>
 
             <br/>
-            <p>In closing, <a href="/login">go away</a>. </p>
+            <p>In closing, <a th:href="@{/login}">go away</a>. </p>
             
         </div>
     </div>
