--- a/stylesheets/stylesheet.scss
+++ b/stylesheets/stylesheet.scss
@@ -52,6 +52,24 @@ h3 {
   margin-top: 50px;
 }
 
+.header-link {
+  position: absolute;
+  left: -0.5em;
+  opacity: 0;
+
+  \-webkit-transition: opacity 0.2s ease-in-out 0.1s;
+  \-moz-transition: opacity 0.2s ease-in-out 0.1s;
+  \-ms-transition: opacity 0.2s ease-in-out 0.1s;
+}
+
+h2:hover .header-link,
+h3:hover .header-link,
+h4:hover .header-link,
+h5:hover .header-link,
+h6:hover .header-link {
+  opacity: 1;
+}
+
 @import "navbar";
 
 #toolbarIcons {
