Fix thymeleaf3 issues

--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/servicedesc.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/servicedesc.html
@@ -3,7 +3,7 @@
     <label class="col-sm-3" for="serviceDesc">
         <span th:remove="tag" th:text="#{services.form.label.description}" />
         <i class="fa fa-lg fa-question-circle form-tooltip-icon" data-toggle="tooltip" data-placement="top"
-           th:title="#{services.form.tooltip.description}" />
+           th:title="#{services.form.tooltip.description}"></i>
     </label>
     <div class="col-sm-9">
         <div class="input-group">
