--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/manage.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/manage.html
@@ -11,25 +11,25 @@
         <div class="casmgmt-manage" ng-show="action.isSelected('manage')">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1><i class="fa fa-gears"/>
+                    <h1><i class="fa fa-gears"></i>
                         <span th:remove="tag" th:text="#{management.services.header.navbar.navitem.manageService}"/>
                     </h1>
                 </div>
             </div>
-    
+
             <div th:replace="fragments/services"/>
-    
+
             <div class="row">
                 <div class="col-sm-12">
                     <button class="btn btn-info" ng-click="action.serviceAdd()">
-                        <i class="fa fa-plus-circle"/>
+                        <i class="fa fa-plus-circle"></i>
                         <span th:remove="tag" th:text="#{management.services.header.navbar.navitem.addNewService}"/>
                     </button>
                 </div>
             </div>
         </div>
-    
-    
+
+
         <div class="casmgmt-form" ng-show="action.isSelected('add') || action.isSelected('edit')">
             <div th:replace="fragments/serviceform"/>
         </div>
