Fix thymeleaf3 issues

--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/enabled.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/enabled.html
@@ -5,7 +5,7 @@
             <label class="col-sm-3 important" for="casEnabled" th:text="#{services.form.label.sas.casEnabled}">
 
                 <i class="fa fa-lg fa-question-circle form-tooltip-icon" data-toggle="tooltip" data-placement="top"
-                    th:title="#{services.form.tooltip.sas.casEnabled}" />
+                    th:title="#{services.form.tooltip.sas.casEnabled}"></i>
             </label>
             <div class="col-sm-1">
                 <div class="checkbox checkbox-inline">
@@ -15,7 +15,7 @@
             <div class="col-sm-8">
                 <div class="alert alert-danger" role="alert" ng-if="!serviceFormCtrl.serviceData.supportAccess.casEnabled">
                     <p>
-                        <i class="fa fa-lg fa-info-circle"/>
+                        <i class="fa fa-lg fa-info-circle"></i>
                         <span th:text="#{services.form.warning.casDisabled}" />
                     </p>
                 </div>
