--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/oauthClient.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/oauthClient.html
@@ -13,7 +13,7 @@
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.oidc.jwks}"/>
+                       th:title="#{services.form.tooltip.oidc.jwks}"></i>
                 </label>
 
                 <div class="col-sm-8">
@@ -34,7 +34,7 @@
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.oauthClientId}"/>
+                       th:title="#{services.form.tooltip.oauthClientId}"></i>
                 </label>
 
                 <div class="col-sm-8">
