--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/samlClient.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/samlClient.html
@@ -16,7 +16,7 @@
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.saml.metadata.location}"/>
+                       th:title="#{services.form.tooltip.saml.metadata.location}"></i>
                 </label>
 
                 <div class="col-sm-8">
@@ -39,7 +39,7 @@
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.saml.metadata.maximumvalidity}"/>
+                       th:title="#{services.form.tooltip.saml.metadata.maximumvalidity}"></i>
                 </label>
                 <div class="col-sm-8">
                     <input type="text" autocomplete="off" class="form-control" id="samlMetadataMaxValidity"
@@ -54,7 +54,7 @@
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.saml.authenticationcontextclass}"/>
+                       th:title="#{services.form.tooltip.saml.authenticationcontextclass}"></i>
                 </label>
                 <div class="col-sm-8">
                     <input type="text" autocomplete="off" class="form-control" id="samlAuthContextClass"
@@ -69,7 +69,7 @@
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.saml.metadata.signaturepublickeylocation}"/>
+                       th:title="#{services.form.tooltip.saml.metadata.signaturepublickeylocation}"></i>
                 </label>
                 <div class="col-sm-8">
                     <input type="text" autocomplete="off" class="form-control" id="samlmetadatapublickeylocation"
