--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/servicetype.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/servicetype.html
@@ -2,7 +2,7 @@
     <label class="col-sm-3" for="serviceType">
         <span th:remove="tag" th:text="#{services.form.label.type}" />
         <i class="fa fa-lg fa-question-circle form-tooltip-icon" data-toggle="tooltip" data-placement="top"
-           th:title="#{services.form.tooltip.type}" />
+           th:title="#{services.form.tooltip.type}" ></i>
     </label>
     <div class="col-sm-9">
         <div class="input-group">
