--- a/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/servicename.html
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/templates/fragments/serviceform/servicename.html
@@ -3,12 +3,12 @@
         <span th:remove="tag" th:text="#{services.form.label.name}"/>
 
         <i class="fa fa-lg fa-question-circle form-tooltip-icon" data-toggle="tooltip" data-placement="top"
-            th:title="#{services.form.tooltip.name}"/>
+            th:title="#{services.form.tooltip.name}"></i>
     </label>
     <div class="col-sm-9">
         <div class="input-group">
             <div class="input-group-addon input-group-required" th:title="#{services.form.required}">
-                <i class="fa fa-exclamation-triangle"/>
+                <i class="fa fa-exclamation-triangle"></i>
             </div>
             <input type="text" class="form-control" id="serviceName" ng-model="serviceFormCtrl.serviceData.name"/>
         </div>
