--- a/webapp/cas-server-webapp/src/main/resources/templates/protocol/3.0/casServiceValidationSuccess.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/protocol/3.0/casServiceValidationSuccess.html
@@ -1,13 +1,13 @@
 <cas:serviceResponse xmlns:cas='http://www.yale.edu/tp/cas'>
     <cas:authenticationSuccess>
-        <cas:user th:text="${principal.id}" />
-        <cas:proxyGrantingTicket th:if="${pgtIou}" th:text="${pgtIou}"/>
+        <cas:user th:utext="${principal.id}"/>
+        <cas:proxyGrantingTicket th:if="${pgtIou}" th:utext="${pgtIou}"/>
         <cas:proxies th:if="${not #lists.isEmpty(chainedAuthentications)}">
-            <cas:proxy th:each="proxy : ${chainedAuthentications}" th:text="${proxy.principal.id}" />
+            <cas:proxy th:each="proxy : ${chainedAuthentications}" th:utext="${proxy.principal.id}"/>
         </cas:proxies>
         <cas:attributes th:if="${not #lists.isEmpty(formattedAttributes)}">
             <div th:each="attr : ${formattedAttributes}" th:remove="tag">
-                <div th:utext="${attr}" th:remove="tag" />
+                <div th:utext="${attr}" th:remove="tag"/>
             </div>
         </cas:attributes>
     </cas:authenticationSuccess>
