Added ability to revoke trusted dev records

--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewTrustedDevices.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewTrustedDevices.html
@@ -7,7 +7,8 @@
         /*<![CDATA[*/
         
         var urls = {
-            getRecords: /*[[@{/status/trustedDevs/getRecords}]]*/
+            getRecords: /*[[@{/status/trustedDevs/getRecords}]]*/ ,
+            revokeRecord: /*[[@{/status/trustedDevs/revokeRecord}]]*/
         };
 
         /*]]>*/
