--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,7 @@
         </li>
         <li id="sidebartoc">
             <a data-toggle="collapse"
+               id="tableOfContents"
                href="#sidebarTopics"
                data-parent="#lg-menu"
                aria-expanded="true"
