Fixed pac4j error handling

--- a/webapp/cas-server-webapp/src/main/resources/templates/casPac4jStopWebflow.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casPac4jStopWebflow.html
@@ -11,7 +11,7 @@
         <h2 th:utext="#{screen.pac4j.unauthz.heading}"/>
         <p th:utext="#{screen.pac4j.unauthz.message}"/>
 
-        <div th:if="${error}">
+        <div>
             <p/>
             <table class="table table-bordered table-hover table-responsive">
                 <thead>
