--- a/webapp/cas-server-webapp/src/main/resources/templates/casConfirmView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casConfirmView.html
@@ -2,17 +2,14 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-  <title th:text="#{screen.confirmation.message}"></title>
+    <title th:text="#{screen.confirmation.message}"></title>
 </head>
 
 <body id="cas">
 <div layout:fragment="content" class="confirmView">
     <div class="alert alert-info">
-      <h2 class="h3" th:text="#{screen.confirmation.message}" />
-
-      <section class="row btn-row">
-        <a class="btn btn-submit" th:href="${serviceWarningUrl}"><span th:text="#{screen.button.continue}"/></a>
-      </section>
+        <h2 class="h3" th:text="#{screen.confirmation.message}"/>
+        <a class="btn btn-success" th:href="${serviceWarningUrl}"><span th:text="#{screen.button.continue}"/></a>
     </div>
 </div>
 </body>
