Update forget password url

--- a/cas-server-webapp/src/main/webapp/themes/wavity/res/wavity/templates/login/login.html
+++ b/cas-server-webapp/src/main/webapp/themes/wavity/res/wavity/templates/login/login.html
@@ -44,7 +44,7 @@
 				<div class="form-group">
     				<div class="col-sm-12">
 						<input type="submit" class="btn btn-primary outline pull-left" name="submit" id="submit" value="<%= nls.LOGIN %>">
-						<a href="javascript:;;" class="pull-right"><p class="text-muted">Forgot Password</p></a>
+						<a id="forgetPasswordLink" href="javascript:;;" class="pull-right"><p class="text-muted">Forgot Password</p></a>
 	    			</div>
   				</div>
 			</form>
